# uxvault

./: README.md  colsRuleCline.md  landing.py  pyproject.toml  streamlit_kanban_os-0.1.0.dev0-py3-none-any.whl  streamlit_kanban_os-0.3.0.dev0-py3-none-any.whl
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.streamlit/: config.toml
uxvault/: about.py  create_card_sorting.py  dashboard.py  intro.py  landing.py  log_in.py  solve_card_sorting.py
uxvault/backend/: api_endpoints.md  backend_architecture.md  backend_requirements.md  schema.sql  supaStreamlitDocumentation.md  supabase_client.py
uxvault/pages/: about.py
uxvault/utils/: card_sorting_analysis.py  url_handling.py
