[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Quinche",email = "gabrielquinche@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (==1.50)",
    "streamlit-kanban-os @ file:///home/vscode/.streamlit/streamlit_kanban_os-0.1.0.dev0-py3-none-any.whl",
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
